// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfoGroup /> should render InfoGroup with Avatars and apply correct padding to InfoItemKey and InfoItemValue 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 20px;
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(0,0%,100%,1);
}

.c7.c7.c7.c7.c7 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0px;
}

.c10.c10.c10.c10.c10 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c14.c14.c14.c14.c14 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c18.c18.c18.c18.c18 {
  color: hsla(211,26%,34%,1);
  font-family: "Menlo",San Francisco Mono,Courier New,Roboto Mono,monospace;
  font-size: 0.625rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c22.c22.c22.c22.c22 {
  color: hsla(227,71%,51%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c17.c17.c17.c17.c17 {
  padding: 0px 4px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c8.c8.c8.c8.c8 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c8.c8.c8.c8.c8 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c19.c19.c19.c19.c19 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c19.c19.c19.c19.c19 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c19.c19.c19.c19.c19:focus-visible .content-container {
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.09);
}

.c19.c19.c19.c19.c19 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
        data-testid="info-item-key-with-avatar-1"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="avatar"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <div
                  class="c8"
                  color="neutral"
                >
                  <div
                    class="c9"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c10"
                      data-blade-component="text"
                    >
                      SD
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <p
                class="c13"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
            <p
              class="c14"
              data-blade-component="text"
            >
              Customer information
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c15"
        data-blade-component="info-item-value"
        data-testid="info-item-value-with-avatar-1"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <p
                class="c16"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
        data-testid="info-item-key-with-avatar-2"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="avatar"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <div
                  class="c8"
                  color="neutral"
                >
                  <div
                    class="c9"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c10"
                      data-blade-component="text"
                    >
                      BA
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <p
                class="c13"
                data-blade-component="text"
              >
                Payment ID
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c15"
        data-blade-component="info-item-value"
        data-testid="info-item-value-with-avatar-2"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <span
                class=" c17"
                data-blade-component="code"
              >
                <code
                  class="c18"
                  data-blade-component="base-text"
                >
                  pay_MK7DGqwYXEwx9Q
                </code>
              </span>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <button
              aria-disabled="false"
              class="c19"
              data-blade-component="link"
              role="button"
              type="button"
            >
              <span
                class="c20 content-container"
                data-blade-component="base-box"
              >
                <span
                  class="c21"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      d="M3 4C3 3.44772 3.44772 3 4 3H13C13.5523 3 14 3.44772 14 4V5C14 5.55228 14.4477 6 15 6C15.5523 6 16 5.55228 16 5V4C16 2.34315 14.6569 1 13 1H4C2.34315 1 1 2.34315 1 4V13C1 14.6569 2.34315 16 4 16H5C5.55228 16 6 15.5523 6 15C6 14.4477 5.55228 14 5 14H4C3.44772 14 3 13.5523 3 13V4Z"
                      data-blade-component="svg-path"
                      fill="hsla(227, 71%, 51%, 1)"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11 8C9.34315 8 8 9.34315 8 11V20C8 21.6569 9.34315 23 11 23H20C21.6569 23 23 21.6569 23 20V11C23 9.34315 21.6569 8 20 8H11ZM10 11C10 10.4477 10.4477 10 11 10H20C20.5523 10 21 10.4477 21 11V20C21 20.5523 20.5523 21 20 21H11C10.4477 21 10 20.5523 10 20V11Z"
                      data-blade-component="svg-path"
                      fill="hsla(227, 71%, 51%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c22"
                  data-blade-component="base-text"
                />
              </span>
            </button>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c23"
        data-blade-component="info-item-key"
        data-testid="info-item-key-with-non-avatar"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <span>
              Non Avatar element
            </span>
          </div>
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <p
                class="c13"
                data-blade-component="text"
              >
                Support Agent
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c24"
        data-blade-component="info-item-value"
        data-testid="info-item-value-with-non-avatar"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <p
                class="c16"
                data-blade-component="text"
              >
                John Doe
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different alignments 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 0px;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <div>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c7"
          data-blade-component="info-item-value"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c9"
          data-blade-component="info-item-value"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c10"
          data-blade-component="info-item-key"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c9"
          data-blade-component="info-item-value"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different sizes 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 2px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 14px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 18px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 8px;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 24px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c14.c14.c14.c14.c14 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c18.c18.c18.c18.c18 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c19.c19.c19.c19.c19 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <div
    class=""
    data-blade-component="box"
  >
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c7"
          data-blade-component="info-item-value"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <p
                  class="c8"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c10"
                data-blade-component="base-box"
              >
                <p
                  class="c11"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c7"
          data-blade-component="info-item-value"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c10"
                data-blade-component="base-box"
              >
                <p
                  class="c12"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c13"
                data-blade-component="base-box"
              >
                <p
                  class="c14"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c7"
          data-blade-component="info-item-value"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c13"
                data-blade-component="base-box"
              >
                <p
                  class="c15"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="c0"
      data-blade-component="info-group"
    >
      <div
        class="c1"
        data-blade-component="info-item"
      >
        <dt
          class="c2"
          data-blade-component="info-item-key"
        >
          <div
            class="c16"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c17"
                data-blade-component="base-box"
              >
                <p
                  class="c18"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c7"
          data-blade-component="info-item-value"
        >
          <div
            class="c16"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c17"
                data-blade-component="base-box"
              >
                <p
                  class="c19"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with gridTemplateColumns="50% 50%" 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: 50% 50%;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Transaction Amount
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                ₹1,234.56
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Status
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Completed
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with itemOrientation="vertical" 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: repeat(min(4,4),1fr);
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payment Method
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Credit Card
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Transaction Amount
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  ₹1,234.56
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Status
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Completed
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render complex InfoGroup with horizontal itemOrientation, leading/trailing props, helpText, etc 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  padding: 8px;
  margin: 0px;
  max-width: 600px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  border-left-color: hsla(211,20%,52%,0.18);
  border-left-style: solid;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 12px;
  gap: 4px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 0px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 12px;
  padding-left: 0px;
  gap: 4px;
}

.c13.c13.c13.c13.c13 {
  background-color: hsla(0,0%,100%,1);
}

.c15.c15.c15.c15.c15 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c22.c22.c22.c22.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c23.c23.c23.c23.c23 {
  text-align: left;
  height: 16px;
  background-color: hsla(150,100%,32%,0.09);
}

.c25.c25.c25.c25.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

.c27.c27.c27.c27.c27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c28.c28.c28.c28.c28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
}

.c32.c32.c32.c32.c32 {
  text-align: left;
  height: 16px;
  background-color: hsla(150,100%,32%,1);
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0px;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c18.c18.c18.c18.c18 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c19.c19.c19.c19.c19 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c26.c26.c26.c26.c26 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c29.c29.c29.c29.c29 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.64;
  margin-right: 2px;
}

.c30.c30.c30.c30.c30 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c31.c31.c31.c31.c31 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.64;
}

.c34.c34.c34.c34.c34 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c4.c4.c4.c4.c4 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c24.c24.c24.c24.c24 {
  background-color: hsla(150,100%,32%,0.09);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c33.c33.c33.c33.c33 {
  background-color: hsla(150,100%,32%,1);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c16.c16.c16.c16.c16 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 20px;
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c16.c16.c16.c16.c16 img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

@media screen and (min-width:320px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3 c4"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
              <path
                d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c9"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
            <p
              class="c10"
              data-blade-component="text"
            >
              Customer information
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c11"
        data-blade-component="info-item-value"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c13 c14"
              data-blade-component="avatar"
            >
              <div
                class="c15"
                data-blade-component="base-box"
              >
                <div
                  class="c16"
                  color="neutral"
                >
                  <div
                    class="c17"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c18"
                      data-blade-component="text"
                    >
                      SD
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c19"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c20"
        data-blade-component="info-item-key"
      >
        <div
          class="c3 c4"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M5.105 10.429a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H5.105Zm6.316 0a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H11.42ZM2 22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-1.143a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1V22Zm15.737-11.571a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1h-1.158Zm-5.273-9.186a1 1 0 0 0-.928 0l-9 4.714A1 1 0 0 0 2 6.843v.49a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-.49a1 1 0 0 0-.536-.886l-9-4.714Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c9"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
            <p
              class="c10"
              data-blade-component="text"
            >
              Payment method used
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c21"
        data-blade-component="info-item-value"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c19"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c22"
              data-blade-component="badge"
            >
              <div
                class="c23 c24"
                data-blade-component="base-box"
              >
                <div
                  class="c25"
                  data-blade-component="base-box"
                >
                  <p
                    class="c26"
                    data-blade-component="text"
                  >
                    Active
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c20"
        data-blade-component="info-item-key"
      >
        <div
          class="c3 c4"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c9"
                data-blade-component="text"
              >
                Transaction Amount
              </p>
            </div>
            <p
              class="c10"
              data-blade-component="text"
            >
              Transaction amount
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c21"
        data-blade-component="info-item-value"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class="c27"
                data-blade-component="amount"
              >
                <div
                  class="c28"
                  data-blade-component="base-box"
                >
                  <span
                    class="c29"
                    data-blade-component="base-text"
                    opacity="0.64"
                  >
                    ₹
                  </span>
                  <span
                    class="c30"
                    data-blade-component="base-text"
                  >
                    123,456
                  </span>
                  <span
                    class="c31"
                    data-blade-component="base-text"
                    opacity="0.64"
                  >
                    .
                    00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c20"
        data-blade-component="info-item-key"
      >
        <div
          class="c3 c4"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c9"
                data-blade-component="text"
              >
                Status
              </p>
            </div>
            <p
              class="c10"
              data-blade-component="text"
            >
              Current status
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c21"
        data-blade-component="info-item-value"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <p
                class="c19"
                data-blade-component="text"
              >
                Completed
              </p>
            </div>
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c22"
              data-blade-component="badge"
            >
              <div
                class="c32 c33"
                data-blade-component="base-box"
              >
                <div
                  class="c25"
                  data-blade-component="base-box"
                >
                  <p
                    class="c34"
                    data-blade-component="text"
                  >
                    Success
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render simple InfoGroup 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Transaction Amount
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                ₹1,234.56
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;
